# CS_548_D3D_davissj

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/assign01/: BunnyXYZ.pcd  BunnyXYZN.pcd  BunnyXYZNRGB.pcd  BunnyXYZRGB.pcd
data/assign02/: bunny.pcd  medium_cube.pcd  small_bunny.pcd  small_cube.pcd  tiny_cube.pcd
data/assign03/ground/: cd_0_0.500_noise_outlier_large_bunny.npy  cd_0_0.500_noise_outlier_sphere.npy  cd_0_0.500_noise_pervasive_large_bunny.npy  cd_0_0.500_noise_pervasive_sphere.npy  cd_0_0.500_orig_large_bunny.npy  cd_0_0.500_orig_sphere.npy  cd_0_1.000_noise_outlier_large_bunny.npy  cd_0_1.000_noise_outlier_sphere.npy  cd_0_1.000_noise_pervasive_large_bunny.npy  cd_0_1.000_noise_pervasive_sphere.npy  cd_0_1.000_orig_large_bunny.npy  cd_0_1.000_orig_sphere.npy  cd_0_1.500_noise_outlier_large_bunny.npy  cd_0_1.500_noise_outlier_sphere.npy  cd_0_1.500_noise_pervasive_large_bunny.npy  cd_0_1.500_noise_pervasive_sphere.npy  cd_0_1.500_orig_large_bunny.npy  cd_0_1.500_orig_sphere.npy  cd_1024_0.500_noise_outlier_large_bunny.npy  cd_1024_0.500_noise_outlier_sphere.npy  cd_1024_0.500_noise_pervasive_large_bunny.npy  cd_1024_0.500_noise_pervasive_sphere.npy  cd_1024_0.500_orig_large_bunny.npy  cd_1024_0.500_orig_sphere.npy  cd_1024_1.000_noise_outlier_large_bunny.npy  cd_1024_1.000_noise_outlier_sphere.npy  cd_1024_1.000_noise_pervasive_large_bunny.npy  cd_1024_1.000_noise_pervasive_sphere.npy  cd_1024_1.000_orig_large_bunny.npy  cd_1024_1.000_orig_sphere.npy  cd_1024_1.500_noise_outlier_large_bunny.npy  cd_1024_1.500_noise_outlier_sphere.npy  cd_1024_1.500_noise_pervasive_large_bunny.npy  cd_1024_1.500_noise_pervasive_sphere.npy  cd_1024_1.500_orig_large_bunny.npy  cd_1024_1.500_orig_sphere.npy  cd_128_0.500_noise_outlier_large_bunny.npy  cd_128_0.500_noise_outlier_sphere.npy  cd_128_0.500_noise_pervasive_large_bunny.npy  cd_128_0.500_noise_pervasive_sphere.npy  (+1004 more)
data/assign03/input/: noise_outlier_large_bunny.pcd  noise_outlier_sphere.pcd  noise_pervasive_large_bunny.pcd  noise_pervasive_sphere.pcd  orig_large_bunny.pcd  orig_sphere.pcd
data/assign04/ground/: centered_cloud_BUNNY_ROT_BIG_ALL_TR_BIG.npz  centered_cloud_BUNNY_ROT_BIG_X.npz  centered_cloud_BUNNY_ROT_SMALL_ALL_TR_BIG.npz  centered_cloud_BUNNY_ROT_SMALL_X.npz  centered_cloud_BUNNY_ROT_SMALL_Y_TR_SMALL.npz  centered_cloud_BUNNY_ROT_SMALL_Z_TR_BIG.npz  centered_cloud_BUNNY_SAME.npz  centered_cloud_BUNNY_TR_BIG.npz  centered_cloud_BUNNY_TR_SMALL.npz  centered_cloud_CUBES.npz  centered_cloud_PLANES.npz  icp_ptp_BUNNY_ROT_BIG_ALL_TR_BIG_iter_000.npz  icp_ptp_BUNNY_ROT_BIG_ALL_TR_BIG_iter_001.npz  icp_ptp_BUNNY_ROT_BIG_ALL_TR_BIG_iter_002.npz  icp_ptp_BUNNY_ROT_BIG_ALL_TR_BIG_max_iter_002_rmse_00.npz  icp_ptp_BUNNY_ROT_BIG_ALL_TR_BIG_max_iter_010_rmse_01.npz  icp_ptp_BUNNY_ROT_BIG_ALL_TR_BIG_max_iter_050_rmse_00.npz  icp_ptp_BUNNY_ROT_BIG_X_iter_000.npz  (+87 more)
python/: Assign01.py  Assign02.py  Assign03.py  Assign04.py  ExerciseNoise.py  Exercises01.py  ExercisesNN.py  ExercisesPreprocess.py  General_Assign04.py  SimpleOpen3D.py  Test_Assign01.py  Test_Assign02.py  Test_Assign03.py  Test_Assign04.py
src/app/: Assign01.cpp  SearchPCL.cpp  SimplePCL.cpp
src/include/: PCD.hpp
src/lib/: PCD.cpp
src/tests/: Test_Assign01.cpp
(+4 files in other folders)
